syntax = "proto3";

option java_package = "com.tourmate.grpc";
option java_outer_classname = "TourServiceProto";
option java_multiple_files = true;
option csharp_namespace = "TourMate.Grpc";

package tourservice;

service TourService {
  rpc GetByTourGuideId (TourGuideIdRequest) returns (TourServiceList);
  rpc GetNumOfTourByTourGuideId (TourGuideIdRequestAnNumberOfTours) returns (TourServiceList);
}

message TourGuideIdRequest {
  int32 tourGuideId = 1;
}

message TourGuideIdRequestAnNumberOfTours {
  int32 tourGuideId = 1;
  int32 numberOfTours = 2; // <--- thêm dòng này
}



message TourServiceItem {
  int32 serviceId = 1;
  string serviceName = 2;
  float price = 3;
  string duration = 4;
  string content = 5;
  string image = 6;
  string createdDate = 7;
  bool isDeleted = 8;
  string title = 9;
  string tourDesc = 10;
  int32 areaId = 11;
}

message TourServiceList {
  repeated TourServiceItem items = 1;
}
